--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
+  # isar_flutter_libs: ^3.1.0+1
+  isar: ^3.1.0+1
+  isar_generator: ^3.1.0+1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,6 +66,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/quran.json
+    - assets/images/ampoule.png
+    - assets/images/favori.png
+    - assets/images/khetm_icon.png
+    - assets/images/khetm.jpg
+    - assets/images/menu.png
+    - assets/images/mode-nuit.png
+    - assets/images/save_icon.png
     - assets/images/1.png
     - assets/images/2.png
     - assets/images/3.png
